# insead-voicebot

./: .env.example  .gitignore  AGENTS.md  README.md  compose.prod.yml  docker-compose.dev.yml
agent/: .env.example  Dockerfile  main.py  prompt.py  pyproject.toml  usage.py
agent/content/: course.md  faq.md  persona.md  team.md  use-case.md
deploy/: Caddyfile.snippet  _replace_caddy_block.py  bootstrap.md  livekit.yaml
web/: .env.local.example  .npmrc  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/admin/: route.ts
web/app/api/token/: route.ts
web/components/: About.tsx  App.tsx  BusinessCase.tsx  FAQ.tsx  TechStack.tsx  TopNav.tsx  Transcript.tsx  VoiceMode.tsx  VoiceSession.tsx  useAudioAnalyser.ts  useVoiceSession.ts
web/components/ui/: Icon.tsx  Orb.tsx  Pill.tsx  StatusPill.tsx
web/lib/: content.ts  usage.ts
