[project]
name = "insead-voicebot-agent"
version = "0.1.0"
description = "LiveKit Agent worker for INSEAD voicebot demo"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-anthropic>=1.0.0",
    "livekit-plugins-elevenlabs>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
